feat: integrate Vercel serverless functions for transaction management
- Added `load.ts` API endpoint to fetch transactions from the database.
- Implemented `save.ts` API endpoint to save new transactions with password protection.
- Created `setup.ts` API endpoint to initialize the database and create the transactions table if it doesn't exist.
- Updated `package.json` to include `@vercel/node` dependency.
- Refactored frontend code in `main.js` to handle transaction loading and saving.
- Changed input field labels and IDs in `index.html` for clarity.
- Moved inline styles to a separate `styles.css` file for better organization.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/yuan-miranda/peralytics#readme",
   "dependencies": {
     "@libsql/client": "^0.15.15",
+    "@vercel/node": "^5.4.0",
     "lucide": "^0.545.0"
   }
 }
